.kube/minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  ports:
    - protocol: TCP
      name: minio
      port: 9000
    - protocol: TCP
      name: minio-console
      port: 9001
  selector:
    app: minio
