.kube/moprs.yaml
apiVersion: v1
kind: Service
metadata:
  name: moprs
  labels:
    app: moprs
spec:
  ports:
  - port: 8080
    name: moprs
  clusterIP: None
  selector:
    app: moprs
