.kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moprs
spec:
  defaultBackend:
    service:
      name: moprs
      port:
        number: 8080
